Ajustado exibição de texto e imagens
Texto e imagem agora são exibidos lado-a-lado

--- a/index.html
+++ b/index.html
@@ -7,16 +7,27 @@
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
+<!-- Fazer o site mudar em telas maiores / Adicionar conteúdo / Mudar fonte e esquema de cores -->
 <body>
     <header>
         <h1>Muito bom, recomendo!</h1>
     </header>
     <main>
-        <section>
+        <section class="direita">
             <h1>Nome da obra</h1>
             <h2>Plataforma/Gênero</h2>
-            <img src="imagens/86c4bc660b544ff754ffdbc7c77fe12c.jpg" alt="Imagem de teste">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia itaque nostrum ratione, dignissimos sunt voluptatibus vero nemo, labore error velit quam dolor eius beatae cum accusamus illo quia, quidem maxime. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quam nihil aut magni sequi fuga error dicta ut, ab aliquid commodi unde! Ducimus ut asperiores quod maxime id harum optio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, ullam ipsa. Laborum impedit enim neque praesentium similique amet ut quos cum nesciunt ducimus odio dicta, saepe eos repudiandae aspernatur fugiat.</p>
+            <div class="container">
+                <img src="imagens/86c4bc660b544ff754ffdbc7c77fe12c.jpg" alt="Imagem de teste">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia itaque nostrum ratione, dignissimos sunt voluptatibus vero nemo, labore error velit quam dolor eius beatae cum accusamus illo quia, quidem maxime. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quam nihil aut magni sequi fuga error dicta ut, ab aliquid commodi unde! Ducimus ut asperiores quod maxime id harum optio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, ullam ipsa. Laborum impedit enim neque praesentium similique amet ut quos cum nesciunt ducimus odio dicta, saepe eos repudiandae aspernatur fugiat.</p>
+            </div>
+        </section>
+        <section class="esquerda">
+            <h1>Nome da obra</h1>
+            <h2>Plataforma/Gênero</h2>
+            <div class="container">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia itaque nostrum ratione, dignissimos sunt voluptatibus vero nemo, labore error velit quam dolor eius beatae cum accusamus illo quia, quidem maxime. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quam nihil aut magni sequi fuga error dicta ut, ab aliquid commodi unde! Ducimus ut asperiores quod maxime id harum optio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, ullam ipsa. Laborum impedit enim neque praesentium similique amet ut quos cum nesciunt ducimus odio dicta, saepe eos repudiandae aspernatur fugiat.</p>
+                <img src="imagens/86c4bc660b544ff754ffdbc7c77fe12c.jpg" alt="Imagem de teste">
+            </div>
         </section>
     </main>
 </body>
